# light-polygon

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.zh.md
light_polygon/: cli.py  config.py  platform.py
light_polygon/auth/: commands.py  manager.py  session.py
light_polygon/db/: connection.py  context.py  migrations.py  models.py  schema.sql
light_polygon/export/: commands.py  packager.py
light_polygon/judge/: checker.py  commands.py  compiler.py  engine.py  sandbox.py  service.py
light_polygon/problem/: commands.py  layout.py  manager.py
light_polygon/solution/: commands.py  manager.py
light_polygon/statement/: commands.py  renderer.py
light_polygon/statement/templates/: page.html  page.tex
light_polygon/tests/: commands.py  generator.py  manager.py  toml_config.py
light_polygon/utils/: console.py  diff.py  slugify.py
tests/: conftest.py  test_auth.py  test_checker.py  test_cli.py  test_compiler.py  test_db.py  test_export.py  test_generate.py  test_judge.py  test_platform.py  test_problem.py  test_sandbox.py  test_session.py  test_solution.py  test_statement.py
