[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "light-polygon"
version = "0.1.0"
description = "A lightweight Codeforces-style Polygon for algorithm competition problem preparation"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15,<1",
    "rich>=13,<16",
    "shellingham>=1.5",
    "bcrypt>=4,<6",
    "python-slugify>=8",
    "jinja2>=3.1",
    "psutil>=6",
    "pyyaml>=6",
    "tomli-w>=1",
    "colorama>=0.4; platform_system=='Windows'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "black>=24",
    "ruff>=0.8",
]

[project.scripts]
light-polygon = "light_polygon.cli:app"
lp = "light_polygon.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["light_polygon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["light_polygon/tests", "data", ".git"]
python_files = ["test_*.py"]
